--- a/notebooks/sandbox.ipynb
+++ b/notebooks/sandbox.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "15fea833",
    "metadata": {},
    "outputs": [],
@@ -18,47 +18,206 @@
     "\n",
     "# Add the project root to Python path\n",
     "project_root = Path.cwd().parent if Path.cwd().name == 'notebooks' else Path.cwd()\n",
-    "sys.path.insert(0, str(project_root))\n",
-    "\n",
-    "from src.domain.entities.event import Event"
+    "sys.path.insert(0, str(project_root))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "3fe2994d",
+   "execution_count": 2,
+   "id": "61dacb2f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.domain.entities.event import Event\n",
-    "from src.domain.enums.alert_level import AlertLevel"
+    "from datetime import datetime\n",
+    "from src.domain import Event, EventStatus, EventLevel"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "69f2c555",
+   "execution_count": 3,
+   "id": "25c57e15",
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_event = Event.create(\n",
-    "    source=\"test\",\n",
+    "mem_leak = Event(\n",
+    "    id=1,\n",
+    "    source=\"apolo_c001\",\n",
     "    metadata={\n",
     "        \"cpu_usage\": 0.8,\n",
     "        \"memory_usage\": 0.5,\n",
-    "        \"disk_usage\": 0.3,\n",
     "    },\n",
-    "    level=AlertLevel.ERROR,\n",
+    "    level=EventLevel.INFO,\n",
+    "    timestamp=datetime.now(),\n",
+    "    status=EventStatus.NEW,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "54bdd3cc",
+   "execution_count": 4,
+   "id": "64e38ff9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mem_leak.id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "03a8f939",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mem_leak.is_acknowledged())\n",
+    "print(mem_leak.is_resolved())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "92c8980d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mem_leak.acknowledge()\n",
+    "mem_leak.resolve()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "217cc35f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.domain import IRule, IAlertService, IDisplayService, IEventRepository"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "5931c988",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MemoryFastEventRepository(IEventRepository):\n",
+    "    def __init__(self):\n",
+    "        self.events_dict = {}\n",
+    "\n",
+    "    def save(self, events: list[Event]) -> None:\n",
+    "        for event in events:\n",
+    "            self.events_dict[event.id] = event\n",
+    "\n",
+    "    def get_event_by_id(self, id: int) -> Event:\n",
+    "        return self.events_dict[id]\n",
+    "    \n",
+    "    def get_all_events(self) -> list[Event]:\n",
+    "        return list(self.events_dict.values())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "85702e71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DummyAlertService(IAlertService):\n",
+    "    def alert(self, events: list[Event]) -> None:\n",
+    "        print(f\"Alerting {events}\")\n",
+    "\n",
+    "class DummyDisplayService(IDisplayService):\n",
+    "    def show(self, events: list[Event]) -> None:\n",
+    "        print(f\"Displaying {events}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e781f6b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import timedelta\n",
+    "\n",
+    "class SimpleRule(IRule):\n",
+    "    def apply(self, events: list[Event]) -> Event | list[Event] | None:\n",
+    "        for event in events:\n",
+    "            if event.level in [EventLevel.ERROR, EventLevel.CRITICAL]:\n",
+    "                if event.timestamp < (datetime.now() - timedelta(minutes=10)):\n",
+    "                    event.set_as_alerting()\n",
+    "        return events\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "46e08b67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rules = SimpleRule()\n",
+    "repository = MemoryFastEventRepository()\n",
+    "alert_service = DummyAlertService()\n",
+    "display_service = DummyDisplayService()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "704fcf62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.application.use_cases.real_time_even_processor import RealTimeEventProcessor\n",
+    "\n",
+    "processor = RealTimeEventProcessor(\n",
+    "    event_repository=repository,\n",
+    "    rule=rules,\n",
+    "    alert_service=alert_service,\n",
+    "    display_service=display_service\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a5f150fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alerting []\n",
+      "Displaying Event(id=1, source=apolo_c001, metadata={'cpu_usage': 0.8, 'memory_usage': 0.5}, level=EventLevel.INFO, timestamp=2026-02-07 11:51:54.219090, status=EventStatus.RESOLVED, ack_timestamp=2026-02-07 11:51:54.246594, resolved_timestamp=2026-02-07 11:51:54.246610)\n"
+     ]
+    }
+   ],
+   "source": [
+    "processor.process([mem_leak])"
+   ]
   }
  ],
  "metadata": {
